--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,10 @@ dependencies:
   equatable: ^1.0.0
   flutter_bloc: ^3.2.0
   path_provider: ^1.6.5
+  firebase_core: ^0.4.4+3
+  firebase_auth: ^0.15.5+3
+  cloud_firestore: ^0.13.4+2
+  google_sign_in: ^4.3.0
 
 dev_dependencies:
   flutter_test:
