--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.2
   uuid: ^2.0.4
+  provider: ^4.0.4
   equatable: ^1.0.0
   flutter_bloc: ^3.2.0
   path_provider: ^1.6.5
